# attestation-exported-authenticators

./: Cargo.toml  README.md  shell.nix
.github/workflows/: test.yml
attested-quic/: Cargo.toml
attested-quic/src/: lib.rs
src/: authenticator.rs  certificate_request.rs  lib.rs  quic.rs  tls_handshake_messages.rs
src/attestation/: dcap_tdx.rs  mod.rs
src/quic/: mod.rs  test_helpers.rs
tests/: helpers.rs  quic.rs  quic_tdx.rs
