[package]
name = "attestation-exported-authenticators"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rustls = { version = "0.23.5", default-features = false }
x509-parser = "0.18.0"
asn1-rs = "0.7.1"
rcgen = "0.14.3"
p256 = "0.13.2"
sha2 = "0.10.9"
hmac = "0.12.1"
thiserror = "2.0.16"
getrandom = "0.2.16"
ring = "0.17.14"

[dev-dependencies]
quinn = "0.11.9"
tokio = { version = "1.28.1", features = ["full"] }
tdx-quote = "0.0.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
configfs-tsm = "0.0.2"
hex = "0.4.3"

[features]
default = ["mock"]
mock = ["tdx-quote/mock"]
wasm = ["getrandom/js", "ring/wasm32_unknown_unknown_js"]
