[package]
name = "attestation-exported-authenticators"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rustls = { version = "0.23.5", default-features = false, features=["ring"] }
x509-parser = "0.18.0"
asn1-rs = "0.7.1"
sha2 = "0.10.9"
hmac = "0.12.1"
thiserror = "2.0.16"
getrandom = "0.2.16"
ring = "0.17.14"
quinn = { version = "0.11.9", optional = true }
tdx-quote = { version = "0.0.3", optional = true }
configfs-tsm = { version = "0.0.2", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
rustls-webpki = { version = "0.103.8", default-features = false, features = ["ring"] }
cmw = { git = "https://github.com/veraison/rust-cmw.git" }

[dev-dependencies]
quinn = "0.11.9"
rcgen = "0.14.3"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync"] }
tdx-quote = "0.0.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
configfs-tsm = "0.0.2"
hex = "0.4.3"

[features]
default = ["mock", "quic", "dcap-tdx"]
mock = ["tdx-quote/mock", "rand_core"]
wasm = ["getrandom/js", "ring/wasm32_unknown_unknown_js"]
quic = ["quinn"]
dcap-tdx = ["tdx-quote", "configfs-tsm"]

[[test]]
name = "quic_tdx"
required-features = ["quic", "dcap-tdx"]
