[package]
name = "attestation-exported-authenticators"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rustls = { version = "0.23.5", default-features = false }
rustls-webpki = { version = "0.103.8", default-features = false }
x509-parser = "0.18.0"
asn1-rs = "0.7.1"
sha2 = "0.10.9"
hmac = "0.12.1"
thiserror = "2.0.16"
quinn = { version = "0.11.9", optional = true }
tdx-quote = { version = "0.0.4" }
configfs-tsm = { version = "0.0.2" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
cmw = { git = "https://github.com/veraison/rust-cmw.git" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23.5", default-features = true }
rustls-webpki = { version = "0.103.8", default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rustls = { version = "0.23.5", default-features = false, features = ["ring"] }
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
rustls-pki-types = { version = "1.12.0", features = ["web"] }
rustls-webpki = { version = "0.103.8", default-features = false, features = ["ring"] }
getrandom = { version = "0.2.16", features = ["js"] }

[dev-dependencies]
quinn = "0.11.9"
rcgen = "0.14.3"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync"] }
tdx-quote = { version = "0.0.4", features = ["mock"] }
hex = "0.4.3"

[features]
default = ["quic"]
mock = ["tdx-quote/mock"]
quic = ["quinn"]
