[package]
name = "attested-quic"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
attestation-exported-authenticators = { path = ".." }
rustls = { version = "0.23.5", default-features = false }
quinn = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync"] }
tdx-quote = "0.0.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
configfs-tsm = "0.0.2"
hex = "0.4.3"
rcgen = "0.14.3"
thiserror = "2.0.16"

[features]
mock = ["tdx-quote/mock"]
